# tema-sport

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  old_requirements.txt  pyproject.toml  readme.md  test.py  test1.py
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 2024_09_04_1801-b7d6bfbaae14_create_schema.py  2024_09_04_1802-363f8abb4fac_users_and_access_tokens.py  256a81c7f50c_add_users_and_access_tokens_tables.py  85380b5ae9d9_create_schema.py  85380b5ae9d9_create_users.py  fcb01c3d9205_create_access_tokens_table.py
backend/: .env.template  alembic.ini  constants.py  kafka.py  kafka_service.py  main.py  settings.py
backend/actions/: create_superuser.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_09_04_1801-b7d6bfbaae14_create_schema.py  2024_09_18_1955-4545cbdb97e7_all_tables.py
backend/base_api/: main.py
backend/base_api/api/: router.py
backend/base_api/v1/: kafka_consumers.py  router.py  router_auth.py  router_websocket.py
backend/core/: config.py
backend/core/SQLAlchemyDatabases/: base.py  competition.py
backend/core/base/: base_manager.py  (+5 more)
backend/db_storage/: main.py
backend/dependencies/: access_tokens.py  backend.py  strategy.py  user_manager.py
backend/schemas/: user_schemas.py
kafka/: Dockerfile  create-topics.sh  create_kafka_topics.py
old/: kafka.py  old_user.py  settings.py
old/base/: kafka.py  models.py  services.py
old/config_data/: config.py
old/frontend/: Dockerfile
old/frontend_test/: Dockerfile  docker-compose.yml  package.json
(+260 files in other folders)
